bridge/base/0-apartmentapp-namespace.yaml
#! 0-apartmentapp-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: apartmentapp
    labels:
        com.docker.compose.project: apartmentapp
