bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: apartmentapp
    labels:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: apartmentapp
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: apartmentapp
                com.docker.compose.service: db
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: maint-db
                  image: postgres:16
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: docker-entrypoint-initdb-d-init-sql
                      mountPath: /docker-entrypoint-initdb.d/init.sql
            volumes:
                - name: docker-entrypoint-initdb-d-init-sql
                  hostPath:
                    path: C:\Apartment prototype\ApartmentApp\db\init.sql
