bridge/base/app-expose.yaml
#! app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app
    namespace: apartmentapp
    labels:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: app
    ports:
        - name: app-8000
          port: 8000
          targetPort: app-8000
        - name: app-8501
          port: 8501
          targetPort: app-8501
