bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: apartmentapp
    labels:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: app
    ports:
        - name: app-8501
          port: 8501
          protocol: TCP
          targetPort: app-8501

# check if there is at least one published port
