bridge/base/llm-expose.yaml
#! llm-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: llm
    namespace: apartmentapp
    labels:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: llm
spec:
    selector:
        com.docker.compose.project: apartmentapp
        com.docker.compose.service: llm
    ports:
        - name: llm-8000
          port: 8000
          targetPort: llm-8000
